--- a/sales.html
+++ b/sales.html
@@ -13,7 +13,7 @@
         </header>
         <main>  
             <a href="index.html">Homepage</a>
-            <div id="seattle">
+            <div id="sales">
                 
             </div>
         </main>
