--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
             <h1>Homepage</h1>
             <nav>
                 <ul>
-                    
+                    <a href="sales.html">Sales</a>
                 </ul>
             </nav>
         </header>
         <main>  
-            <a href="sales.html">Sales</a>
+            <h2>Locations:</h2>
+            <ul>
+                <li>Seattle</li>
+                <li>Tokyo</li>
+                <li>Dubai</li>
+                <li>Paris</li>
+                <li>Lima</li>
+            </ul>
+            <h3>Working hours from 6AM Until 8 PM</h3>
+            <img src="Assets/chinook.jpg" alt=""> 
+            <img src="Assets/cutter.jpeg" alt="">
+            <img src="Assets/family.jpg" alt="">
+            <img src="Assets/fish.jpg" alt="">
+            <img src="Assets/frosted-cookie.jpg" alt="">
+            <img src="Assets/salmon.png" alt="">
+            <img src="Assets/shirt.jpg" alt="">
         </main>
         <footer>
             <!-- <p>
