--- a/sales.html
+++ b/sales.html
@@ -4,6 +4,7 @@
         <title>
             cookie-stand
         </title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     
     <body>
