--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             cookie-stand
         </title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <!-- <script src="js/app.js"></script> -->
     <body>
@@ -25,13 +26,22 @@
                 <li>Lima</li>
             </ul>
             <h3>Working hours from 6AM Until 8 PM</h3>
-            <img src="Assets/chinook.jpg" alt=""> 
+            <ul class="images">
+                <li><img src="Assets/chinook.jpg" alt=""> </li>
+                <li><img src="Assets/cutter.jpeg" alt=""></li>
+                <li><img src="Assets/family.jpg" alt=""></li>
+                <li><img src="Assets/fish.jpg" alt=""></li>
+                <li><img src="Assets/frosted-cookie.jpg" alt=""></li>
+                <li><img src="Assets/salmon.png" alt=""></li>
+                <li><img src="Assets/shirt.jpg" alt=""></li>
+              </ul> 
+            <!-- <img src="Assets/chinook.jpg" alt=""> 
             <img src="Assets/cutter.jpeg" alt="">
             <img src="Assets/family.jpg" alt="">
             <img src="Assets/fish.jpg" alt="">
             <img src="Assets/frosted-cookie.jpg" alt="">
             <img src="Assets/salmon.png" alt="">
-            <img src="Assets/shirt.jpg" alt="">
+            <img src="Assets/shirt.jpg" alt=""> -->
         </main>
         <footer>
             <!-- <p>
