--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         </title>
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <!-- <script src="js/app.js"></script> -->
     <body>
         <header>
             <h1>Homepage</h1>
@@ -26,6 +25,7 @@
                 <li>Lima</li>
             </ul>
             <h3>Working hours from 6AM Until 8 PM</h3>
+
             <ul class="images">
                 <li><img src="Assets/chinook.jpg" alt=""> </li>
                 <li><img src="Assets/cutter.jpeg" alt=""></li>
@@ -53,3 +53,4 @@
         </footer>        
     </body>
 </html>
+<script src="js/app.js"></script>
