--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>Homepage</h1>
+            <h1>Cookie Stand</h1>
             <nav>
                 <ul>
                     <a href="sales.html">Sales</a>
