--- a/sales.html
+++ b/sales.html
@@ -4,13 +4,12 @@
         <title>
             cookie-stand
         </title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style1.css">
     </head>
     
     <body>
         <header>
             <h1>Sales</h1>
-            
         </header>
         <main>  
             <a href="index.html">Homepage</a>
