--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
             <h1>Cookie Stand</h1>
             <nav>
                 <ul>
-                    <a href="sales.html">Sales</a>
+                    <li><a href="sales.html">Sales</a></li>
+                    <li>about us</li>
+                    <li>Locations</li>
+                    <li>fish cookies</li>
                 </ul>
             </nav>
         </header>
-        <main>  
+        <main>
+            <h2>About us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <h2>Locations:</h2>
             <ul>
                 <li>Seattle</li>
@@ -29,24 +34,17 @@
             <ul class="images">
                 <li><img src="Assets/chinook.jpg" alt=""> </li>
                 <li><img src="Assets/cutter.jpeg" alt=""></li>
-                <li><img src="Assets/family.jpg" alt=""></li>
                 <li><img src="Assets/fish.jpg" alt=""></li>
                 <li><img src="Assets/frosted-cookie.jpg" alt=""></li>
                 <li><img src="Assets/salmon.png" alt=""></li>
                 <li><img src="Assets/shirt.jpg" alt=""></li>
               </ul> 
-            <!-- <img src="Assets/chinook.jpg" alt=""> 
-            <img src="Assets/cutter.jpeg" alt="">
-            <img src="Assets/family.jpg" alt="">
-            <img src="Assets/fish.jpg" alt="">
-            <img src="Assets/frosted-cookie.jpg" alt="">
-            <img src="Assets/salmon.png" alt="">
-            <img src="Assets/shirt.jpg" alt=""> -->
+            
         </main>
         <footer>
-            <!-- <p>
+            <p>
                 &copy;Copy Rights 2021
-            </p> -->
+            </p>
             <nav>
                 
             </nav>
