--- a/sales.html
+++ b/sales.html
@@ -18,18 +18,18 @@
                 <fieldset>
                   <legend>SalesForm</legend>
                     <label for="nameField">Name: </label>
-                    <input type="text" id="nameField">
+                    <input type="text" id="nameField" required maxlength="8">
                     <br>
                     <label for="minField">Min: </label>
-                    <input type="text" id="minField">
+                    <input type="number" id="minField" required >
                     <br>
                     <label for="maxField">Max:</label>
-                    <input type="text" id="maxField">
+                    <input type="number" id="maxField" required>
                     <br>
                     <label for="avgField">AVG:</label>
-                    <input type="text" id="avgField">
+                    <input type="number" id="avgField" required>
                     <br>
-                   <input type="submit" value="Submit">
+                   <input type="submit" value="Submit" required>
                   </fieldset>
               </form>
               
